dark mode height bug fixed

--- a/src/app/dashboard/dark.module.css
+++ b/src/app/dashboard/dark.module.css
@@ -268,7 +268,7 @@ color: yellow;
   justify-content: space-between;
 }
 .outer{
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
   background-color: #343541;
 }
